--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <button type="button">Random Animal Generator</button>
+    <script>
+        function GoToSite() {
+            window.location.href = 'https://runes121.github.io/AnimalGenerator/';
+        }
+    </script>
+    <button onclick="GoToSite" type="button">Random Animal Generator</button>
 </html>
