--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             window.location.href = 'https://runes121.github.io/AnimalGenerator/';
         }
     </script>
-    <button onclick="GoToSite" type="button">Random Animal Generator</button>
+    <button onclick="GoToSite()" type="button">Random Animal Generator</button>
 </html>
 
-v1
+v2
