--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
-    woah
+    <img src="https://th.bing.com/th/id/OIP.wjJSaoeTMsxtM9NxV7OEDAHaFj?rs=1&pid=ImgDetMain" alt="Hognose"></img>
 </html>
