--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
     <img src="https://th.bing.com/th/id/OIP.wjJSaoeTMsxtM9NxV7OEDAHaFj?rs=1&pid=ImgDetMain" alt="Hognose"></img>
+    <b>loookkk it hognosee i cant rememberr what the namee of the snakee youu wanted to gett wasss butt i thoughtt id do thiss bcc i rememberr you sayingg it beforeee</b>
 </html>
