--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<head></head>
 <html>
     <script src="https://cdn.jsdelivr.net/npm/faker@5.5.3/dist/faker.min.js"></script>
     <div id="imageContainer"></div>
@@ -12,6 +13,6 @@
           document.getElementById('imageContainer').appendChild(imgElement);
         });
     </script>      
-    <button id="showimage" type="button">Show a new image</button>
+    <button id="generateAnimalImage" type="button">Show a new image</button>
     <b>loookkk it hognosee i cant rememberr what the namee of the snakee youu wanted to gett wasss butt i thoughtt id do thiss bcc i rememberr you sayingg it beforeee</b>
 </html>
