--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>random animal image</title>
   </head>
 
   <body>
@@ -12,4 +12,5 @@
       <button type="button" id="loadRandomCat">Load Another Random Cat</button>
     </div>
   </body>
+  v1
 </html>
