--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div>
-      <div id="random_emoji_txt"></div>
+      <span id="random_emoji_txt"></span>
       <script>
         function random_animal_emoji() {
           const possilble_emojis = ["🐶", "🐱", "🐭", "🐹", "🐰", "🦊", "🐻", "🐼", "🦁", "🐯", "🐮", "🐷", "🐸", "🐙", "🦑", "🦆", "🦉", "🦅", "🦇", "🦄"];
