--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -11,12 +11,13 @@
       <span id="random_emoji_txt">hello</span>
       <script>
         function random_animal_emoji() {
+          console.log("Changing emoji")
           const possilble_emojis = ["🐶", "🐱", "🐭", "🐹", "🐰", "🦊", "🐻", "🐼", "🦁", "🐯", "🐮", "🐷", "🐸", "🐙", "🦑", "🦆", "🦉", "🦅", "🦇", "🦄"];
           const random_emj_index = Math.floor(Math.random() * possilble_emojis.length)
           document.getElementById("random_emoji_txt").textContent = possilble_emojis[random_emj_index]
         }
       </script>
-      <button type="button" id="loadRandomCat" onclick="random_animal_emoji">Load Another Random Cat</button>
+      <button type="button" id="loadRandomCat" onclick="random_animal_emoji()">Load Another Random Cat</button>
     </div>
   </body>
   v1
