fixed starting page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <script>
         function GoToSite() {
             window.location.href = 'https://runes121.github.io/AnimalGenerator/';
         }
     </script>
     <button onclick="GoToSite()" type="button">Random Animal Generator</button>
+</body>
 </html>
+
+
+
+
+
+
+
+
 
 v2
