upgrade main page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Main Page</title>
 </head>
 <body>
+    <header>List of pages:</header>
     <script>
         function GoToSite() {
             window.location.href = 'https://runes121.github.io/AnimalGenerator/';
