--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -15,8 +15,9 @@
       <script>
         function random_animal_emoji() {
           console.log("Changing emoji")
-          const possilble_emojis = ['🦠', '🕸️', '🕷️', '🦂', '🐞', '🪲', '🐝', '🪳', '🐜', '🦗', '🪱', '🪰', '🦟', '🐛', '🐌', '🦋', '🦇', '🐤🐣', '🐥', '🐦','🐧', '🪶', '🦉🦤', '🦚', '🦩', '🪿', '🐦‍⬛', '🦜','🪽', '🦢', '🕊️', '🦅', '🦃', '🐓', '🦆', '🪼', '🦀', '🦞', '🐙', '🦑', '🦐', '🐡', '🐠', '🐟', '🐋', '🐳', '🦭', '🐬', '🦈', '🦦', '🦖', '🦕', '🐉', '🐍', '🐊🐢', '🦎', '🦫', '🐿️', '🐇', '🦔', '🐀' , '🐁', '🐘🦣', '🦡', '🦥🦨', '🦘', '🦙', '🐫', '🐐🐪', '🐑', '🐏', '🐖', '🐄', '🐃', '🐂', '🦛', '🦏', '🦬', '🦌', '🐎', '🐆', '🐅', '🐈‍⬛', '🐈', '🐕', '🐩', '🐕‍🦺', '🦮', '🦧', '🦍', '🐒', '🐾', '🐽', '🐲', '🐔', '🦄', '🫏', '🫎', '🐴', '🦓', '🐸', '🐼', '🐨', '🐻‍❄️', '🐻', '🐰', '🐹', '🐭', '🐗', '🐷', '🐮', '🦝', '🦊', '🦒', '🐯', '🦁', '🐱', '🐺', '🐶', '🐵' ,'😺']
+          const possilble_emojis = ['🦠', '🕸️', '🕷️', '🦂', '🐞', '🪲', '🐝', '🪳', '🐜', '🦗', '🪱', '🪰', '🦟', '🐛', '🐌', '🦋', '🦇', '🐤', '🐣', '🐥', '🐦','🐧', '🪶', '🦉', '🦤', '🦚', '🦩', '🪿', '🐦‍⬛', '🦜','🪽', '🦢', '🕊️', '🦅', '🦃', '🐓', '🦆', '🪼', '🦀', '🦞', '🐙', '🦑', '🦐', '🐡', '🐠', '🐟', '🐋', '🐳', '🦭', '🐬', '🦈', '🦦', '🦖', '🦕', '🐉', '🐍', '🐊', '🐢', '🦎', '🦫', '🐿️', '🐇', '🦔', '🐀' , '🐁', '🐘', '🦣', '🦡', '🦥', '🦨', '🦘', '🦙', '🐫', '🐐', '🐪', '🐑', '🐏', '🐖', '🐄', '🐃', '🐂', '🦛', '🦏', '🦬', '🦌', '🐎', '🐆', '🐅', '🐈‍⬛', '🐈', '🐕', '🐩', '🐕‍🦺', '🦮', '🦧', '🦍', '🐒', '🐾', '🐽', '🐲', '🐔', '🦄', '🫏', '🫎', '🐴', '🦓', '🐸', '🐼', '🐨', '🐻‍❄️', '🐻', '🐰', '🐹', '🐭', '🐗', '🐷', '🐮', '🦝', '🦊', '🦒', '🐯', '🦁', '🐱', '🐺', '🐶', '🐵' ,'😺']
           const random_emj_index = Math.floor(Math.random() * possilble_emojis.length)
+  
           document.getElementById("random_emoji_txt").textContent = possilble_emojis[random_emj_index]
         }
       </script>
