add fish website

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
     <header>List of pages:</header>
     <script>
-        function GoToSite() {
+        function GoToSite1() {
             window.location.href = 'https://runes121.github.io/AnimalGenerator/';
         }
     </script>
-    <button onclick="GoToSite()" type="button">Random Animal Generator</button>
+    <button onclick="GoToSite1()" type="button">Random Animal Generator</button>
+    <script>
+        function GoToSite2() {
+            window.location.href = 'https://runes121.github.io/SpinTheFish/';
+        }
+    </script>
+    <button onclick="GoToSite2()" type="button">Spin The Fish</button>
 </body>
 </html>
 
