--- a/SpinTheFish/index.html
+++ b/SpinTheFish/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spin The Fish</title>
-    <link rel="animations" href="animation.css">
-    <link rel="spin-controller" href="control.js">
+    <link rel="stylesheet" href="animation.css">
 </head>
 <body>
     <img src="fish-white-background-photo-89667456.webp" alt="fish" id="fish">
     <span id="counter">Spins: 0</span>
-    
+    <script>
+        const fish = document.getElementById("fish")
+
+        function spin_fish() {
+            fish.classList.add("spin-animation")
+            setTimeout(() => {
+                fish.classList.remove("spin-animation")
+            },500)
+        }
+    </script>
+    <button type="button" onclick="spin_fish()">Spin</button>
 </body>
 </html>
