--- a/index.html
+++ b/index.html
@@ -21,5 +21,11 @@
         }
     </script>
     <button onclick="GoToSite2()" type="button">Spin The Fish</button>
+    <script>
+        function GoToSite3() {
+            window.location.href = 'https://runes121.github.io/MathsCalculators/';
+        }
+    </script>
+    <button onclick="GoToSite3()" type="button">Calculators</button>
 </body>
 </html>
