add back button

--- a/AnimalGenerator/index.html
+++ b/AnimalGenerator/index.html
@@ -35,5 +35,6 @@
       </script>
       <button type="button" onclick="spin()">spin</button>
     </div>
+  <button type="button" onclick="window.location.href = 'runes121.github.io'">back to main site</button>
   </body>
 </html>
