--- a/MathsCalculators/index.html
+++ b/MathsCalculators/index.html
@@ -11,5 +11,5 @@
 </body>
     <header>Calculators:</header>
     <b>coming soon</b>
-    <button type="button" onclick="window.location.href = 'runes121.github.io'">back to main site</button>
+    <button type="button" onclick="window.location.href = 'https://runes121.github.io/'">back to main site</button>
 </html>
