--- a/SpinTheFish/index.html
+++ b/SpinTheFish/index.html
@@ -21,6 +21,6 @@
         }
     </script>
     <button type="button" onclick="spin_fish()">Spin</button>
-    <button type="button" onclick="window.location.href = 'runes121.github.io'">back to main site</button>
+    <button type="button" onclick="window.location.href = 'https://runes121.github.io/'">back to main site</button>
 </body>
 </html>
