--- a/SpinTheFish/index.html
+++ b/SpinTheFish/index.html
@@ -20,7 +20,7 @@
             document.getElementById("count").innerText++
         }
     </script>
-    <button type="button" onclick="spin_fish()">Spin</button>
+    <button type="button" onclick="spin_fish()" id="spin_btn">Spin</button>
     <button type="button" onclick="window.location.href = 'https://runes121.github.io/'">back to main site</button>
 </body>
 </html>
