--- a/SpinTheFish/index.html
+++ b/SpinTheFish/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="animation.css">
 </head>
 <body>
+    <script src="myscript.js" defer></script>
     <img src="fish-white-background-photo-89667456.webp" alt="fish" id="fish">
     <h4>Spins: <span id="count">0</span></h4>
     <script>
@@ -23,6 +24,6 @@
         }
     </script>
     <button type="button" onclick="spin_fish()" id="spin_btn">Spin</button>
-    <button type="button" onclick="window.location.href = 'https://runes121.github.io/'">back to main site</button>
+    <button type="button" onclick="window.location.href = 'https://runes121.github.io/'" id="mainsitebtn">back to main site</button>
 </body>
 </html>
