--- a/SpinTheFish/index.html
+++ b/SpinTheFish/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="animation.css">
 </head>
 <body>
-    <script src="myscript.js" defer></script>
+    <script src="script.js" defer></script>
     <img src="fish-white-background-photo-89667456.webp" alt="fish" id="fish">
     <h4>Spins: <span id="count">0</span></h4>
     <script>
