--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
 <body>
     <h1>this page doesnt exist</h4>
     <h2>😱</h3>
+    <button type="button" onclick="window.location.href = 'runes121.github.io'">help me find a way back</button>
     <style>
         h1 {
             font-size: 50px;
@@ -23,6 +24,10 @@
         }
         * {
             font-family: monospace, Monaco;
+        }
+        button {
+            padding: 1%;
+            font-size: 20px;
         }
     </style>
 </body>
