--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
         }
     </script>
     <button onclick="GoToSite3()" type="button">Calculators</button>
+    <script>
+        function GoToSite4() {
+            window.location.href = 'https://runes121.github.io/GameMode/';
+        }
+    </script>
+    <button onclick="GoToSite4()" type="button">Gamemode Picker</button>
 </body>
 </html>
