--- a/spotify/index.html
+++ b/spotify/index.html
@@ -1,1 +1,1 @@
-Your url has been copied to your clipboad, please enter it in the application.
+Please copy this URL and add input it into the application.
